HelloUltraviolet/Fixtures/RejectedSource/Expressions/ArrayIndexNonConst/Expected.uv
//! Expected diagnostic metadata for the ArrayIndexNonConst rejected-source specimen.

expectedDiagnostic("E-UNS-0102", "Index-Array-NonConst-Err")
